Hiragana Quiz/src/app/quiz/Components/character-grid/character-grid.component.css
.column {
    padding: 0px;
  }
  
  .character {

    padding: 10px 10px;
    width: 6.25em;

    background-image: linear-gradient(to bottom right, #90d1ed, #55bdea);
  }
  .character-selected {

    padding: 10px 10px;
    width: 6.25em;

    background-image: linear-gradient(to bottom right, #ff7774, #fe5653);
  }
  p,h1{
    margin: 0px;
  }
  
  .grid-button{
    background: none;
    border: none;
    padding: 0;
    margin: 0;
    font: inherit;
    color: inherit;
    cursor: pointer;
    outline: none;
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    text-decoration: none;
  }

  .study-button{
    width:191.21px;
    margin: 5px;
    color: black;
    border-radius: 30px;
    padding: 25px,50px;

}
.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
    background-color: #fe5653 !important;
    border-color: #fe5653;
    white-space: nowrap;
}

.study-button:hover{
    background-color: #90d1ed !important;
    border-color: #90d1ed !important;
}



@media screen and (max-width: 850px) {
  .character {

    width: 4em;
    height: 4em;

  }
  .character-selected {
    width: 4em;
    height: 4em;
  }

  h1{
    font-size: 1.5em;
  }
  p{
    font-size: 0.7em;
  }


}
@media screen and (max-width: 450px) {
  .character {

    width: 2em;
    height: 2em;
    padding: 0;



  }
  .character-selected {
    width: 2em;
    height: 2em;
    padding: 0;


  }

  h1{
    font-size: 0.5em;
  }
  p{
    font-size: 0.2em;
  }
  p,h1{
    margin: 0;
    padding: 0;
  }


}
  

